fix search bar overflow (#71)

--- a/src/assets/styles/client/client.scss
+++ b/src/assets/styles/client/client.scss
@@ -54,6 +54,9 @@
       }
       .multiselect__tags {
         max-height: 40px;
+        .multiselect__tags-wrap {
+          display: none !important;
+        }
       }
     }
   }
